--- a/promotion-item.html
+++ b/promotion-item.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>cases</title>
+    <title>promotion-item</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -40,7 +40,7 @@
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Создание сайтов</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
-                            <li class="nav-item"><a class="nav-link active" href="cases.html">Кейсы</a></li>
+                            <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                             <!-- <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     aria-current="page">Услуги</a>
@@ -51,14 +51,15 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
-                            <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="promotion.html">Акции</a></li>
                             <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <a class="fw-bold text-decoration-none d-none d-xl-inline-flex ms-4" href="tel:+74951595901">+7 (495) 159-59-01</a>
+                <a class="fw-bold text-decoration-none d-none d-xl-inline-flex ms-4" href="tel:+74951595901">+7 (495)
+                    159-59-01</a>
 
             </div>
         </nav>
@@ -73,71 +74,103 @@
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Реализованные проекты</li>
+                        <li class="breadcrumb-item"><a href="promotion.html">Акции</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Название акции</li>
                     </ol>
                 </nav>
             </div>
         </section>
 
+        <!-- Контент -->
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="mb-5">
-                    <h1 class="text-uppercase fw-bold">Реализованные проекты</h1>
+                <div class="row">
+                    <div class="col-lg-9">
+                        <h1 class="fw-bold mb-4">Название акции</h1>
+                        <img class="rounded-2" src="img/promo-01.gif" alt="">
+                        <!-- Content -->
+                        <div class="post-content pt-4">
+                            <h2>Paragraph Title</h2>
+                            <h3><strong>Est quis sit phasellus proin proin fringilla eu quis.
+                                Placerat praesent blandit urna eu pellentesque dictum. Aliquam duis quam interdum quis.
+                                Urna, rutrum aenean lacus phasellus. Ipsum, ac porttitor lacus orci, cras lacus, quis
+                                leo.</strong></h3>
+                            <p>Purus ornare nisl est nec. Nunc, enim tellus pretium viverra quisque id
+                                in metus volutpat. Urna eget velit venenatis, commodo eget massa. Magna donec dictum
+                                cras nullam platea. Diam rhoncus massa lectus pellentesque tristique. Amet commodo,
+                                egestas vitae bibendum. Volutpat elit condimentum integer tortor porttitor justo vel
+                                lobortis risus. Lacinia pellentesque fermentum tellus orci mauris, velit duis eget.
+                                Commodo justo, hac ligula molestie felis, iaculis. Vitae dui at ante orci, dictum fusce.
+                                Urna, sed urna fringilla faucibus euismod aliquet nec. Quis libero, fermentum amet eu,
+                                condimentum auctor. Sit vel ipsum sem tempus gravida et. Scelerisque blandit orci, est
+                                quis. Nisi, tellus amet est nascetur habitant faucibus ornare et vivamus.</p>
+
+                            <p>Tempor donec aliquam est, a. Sit arcu tellus pharetra, bibendum
+                                hendrerit arcu, sed. Scelerisque dui enim libero sit ac sed lacus lectus. Quam in
+                                iaculis scelerisque feugiat nibh mi. Maecenas posuere lobortis praesent iaculis
+                                sagittis. Egestas vel at praesent ipsum pretium faucibus adipiscing gravida feugiat.</p>
+
+                            <ul>
+                                <li>A eu, ac nunc, volutpat. Augue enim ac justo, at elementum, arcu.</li>
+                                <li>At sodales quam felis ullamcorper iaculis tristique. Felis, etiam felis
+                                    pellentesque sit neque.</li>
+                                <li>Porta ipsum quis lacus eu ipsum mattis sit quis. Massa, massa lectus
+                                    porttitor laoreet ultricies odio fermentum arcu quam.</li>
+                                <li>Accumsan arcu neque, nisl, pellentesque fames justo consequat blandit
+                                    lacus. Eget odio vel nulla vel.</li>
+                                <li>Diam ac phasellus est, eu urna purus blandit aliquam. Vitae accumsan et
+                                    pellentesque diam in.</li>
+                                <li>Tellus arcu, lectus tincidunt neque nunc. Bibendum lacus, molestie ultrices sed
+                                    arcu.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="row gy-4 justify-content-between">
-                    <div class="col-md-6 col-lg-5 pb-3 pb-lg-5">
-                        <article class="card card-case h-100">
-                            <img class="card-img-top" src="img/case-01.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+            </div>
+        </section>
+
+        <!-- Comment form -->
+        <section class="section py-5 dark-mode bg-color-black color-white" style="margin-top: -3rem;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div>
+                            <div class="d-block d-md-flex align-items-center justify-content-between">
+                                <p class="h2 mb-4">Заголовок формы</p>
                             </div>
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-lg-6 pb-3 pb-lg-5">
-                        <article class="card card-case h-100">
-                            <img class="card-img-top" src="img/case-02.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-lg-6 pb-3 pb-lg-5">
-                        <article class="card card-case h-100">
-                            <img class="card-img-top" src="img/case-03.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-lg-5 pb-3 pb-lg-5">
-                        <article class="card card-case h-100">
-                            <img class="card-img-top" src="img/case-04.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-lg-5 pb-3 pb-lg-5">
-                        <article class="card card-case h-100">
-                            <img class="card-img-top" src="img/case-05.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-lg-6 pb-3 pb-lg-5">
-                        <article class="card card-case h-100">
-                            <img class="card-img-top" src="img/case-06.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                            </div>
-                        </article>
+                            <form id="comment-form" method="post" action="#" class="comment-form needs-validation" novalidate>
+                                <div class="row gy-4">
+                                    <div class="col-12 col-md-4">
+                                        <label for="c-name-2" class="form-label d-none">Имя</label>
+                                        <input name="author-2" id="c-name-2" type="text" class="form-control" placeholder="Ваше имя" style="height: 55px;" required>
+                                        <span class="invalid-tooltip">Пожалуйста введите имя.</span>
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <label for="c-email-2" class="form-label d-none">Email</label>
+                                        <input name="email-2" id="c-email-2" type="email" class="form-control" placeholder="Ваш Email" style="height: 55px;" required>
+                                        <span class="invalid-tooltip">Пожалуйста укажите действующий адрес электронной почты.</span>
+                                    </div>
+                                    <!-- <div class="col-12">
+                                        <label for="c-comment-2" class="form-label d-none">Комментарий</label>
+                                        <textarea name="comment-2" id="c-comment-2" class="form-control" rows="5" placeholder="Комментарий" required></textarea>
+                                        <span class="invalid-tooltip">Пожалуйста, введите свой комментарий.</span>
+                                    </div> -->
+                                    <div class="col-12 col-md-4">
+                                        <button type="submit" class="btn btn-primary btn-lg w-100 w-lg-auto">Отправить</button>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" id="ex-check-3" checked="">
+                                            <label class="form-check-label small color-grey" for="ex-check-3">Я согласен(а) с <a class="link-grey" href="policy.html" target="_blank">политикой обработки
+                                                    персональных данных</a></label>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="col-12">
+                                        <button type="submit" class="btn btn-primary btn-lg w-100 w-lg-auto mt-2">Отправить</button>
+                                    </div> -->
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -169,7 +202,8 @@
                         </ul>
                     </div>
                     <div class="mt-3">
-                        <p class="text-uppercase color-blue"><span class="d-block d-lg-inline">Закажите создание</span> и продвижение сайта</p>
+                        <p class="text-uppercase color-blue"><span class="d-block d-lg-inline">Закажите создание</span>
+                            и продвижение сайта</p>
                     </div>
                 </div>
             </div>
@@ -183,7 +217,8 @@
             </div>
             <div class="row gy-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
-                    <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
+                    <p><a class="text-decoration-none"
+                            href="mailto:support@startsite.studio">support@startsite.studio</a></p>
                     <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-start order-lg-1">
@@ -234,7 +269,8 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
-                            <label class="form-check-label small color-grey" for="ex-check-2">Я согласен(а) с <a class="link-grey" href="policy.html" target="_blank">политикой обработки
+                            <label class="form-check-label small color-grey" for="ex-check-2">Я согласен(а) с <a
+                                    class="link-grey" href="policy.html" target="_blank">политикой обработки
                                     персональных данных</a></label>
                         </div>
                         <div class="text-center mt-4">
@@ -275,9 +311,9 @@
     <!-- Cookie alert box -->
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
-        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
-                class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert" aria-label="Close"><span
-                    aria-hidden="true">Ок</span></button>
+        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button
+                type="button" class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert"
+                aria-label="Close"><span aria-hidden="true">Ок</span></button>
         </p>
     </div>
 
