--- a/cases-item.html
+++ b/cases-item.html
@@ -51,6 +51,7 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
                             <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
