--- a/promotion.html
+++ b/promotion.html
@@ -51,6 +51,7 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="promotion.html">Акции</a></li>
                             <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
@@ -88,7 +89,7 @@
                     <div class="col-lg-10">
                         <article class="card card-promotion h-100">
                             <div class="card-body">
-                                <a href="#">
+                                <a href="promotion-item.html">
                                     <img src="img/promo-01.gif" alt="">
                                 </a>
                             </div>
@@ -98,7 +99,7 @@
                     <div class="col-lg-10">
                         <article class="card card-promotion h-100">
                             <div class="card-body">
-                                <a href="#">
+                                <a href="promotion-item.html">
                                     <img src="img/promo-01.gif" alt="">
                                 </a>
                             </div>
