--- a/blog-item.html
+++ b/blog-item.html
@@ -16,8 +16,34 @@
 
 <body>
 
+    <!-- SALE BANNER -->
+    <div class="overflow-hidden bg-color-black">
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-md-2 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img class="top-sale-image-1" src="img/sale-01.png" alt="">
+                        <img class="top-sale-image-2 d-none d-lg-block" src="img/sale-02.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-8 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-center py-1 py-md-2 py-lg-3">
+                        <span class="fz-2 text-uppercase color-white">Акции месяца!</span>
+                        <a class="btn btn-sale-1 ms-4" href="promotion.html">Узнать</a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-end">
+                        <img class="top-sale-image-3 d-none d-lg-block" src="img/sale-03.png" alt="">
+                        <img class="top-sale-image-4" src="img/sale-04.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Меню -->
-    <header class="header bg-white fixed-top">
+    <header class="header bg-white sticky-top top-0">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
 
