--- a/promotion.html
+++ b/promotion.html
@@ -94,7 +94,7 @@
     <main class="main">
 
         <!-- breadcrumb -->
-        <section class="py-2">
+        <section class="d-none py-2">
             <div class="container">
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
